--- a/Views/ShowDataView.xaml
+++ b/Views/ShowDataView.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CallaciProjektMaui.Views.ShowDataView"
              BackgroundColor="{DynamicResource Light}"
-             Title="ShowDataView">
+             Title="ShowDataView"
+             xmlns:viewmodel="clr-namespace:CallaciProjektMaui.ViewModels"      
+             BindingContext="{Binding Source={RelativeSource Self}, Path=DefaultViewModel}">
 
     <Grid RowSpacing="1" ColumnSpacing="1">
 
@@ -24,6 +26,7 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
             <Label Grid.Column="0" Text="Id" />
@@ -31,6 +34,7 @@
             <Label Grid.Column="2" Text="Reponse" />
             <Label Grid.Column="3" Text="Nb.Point" />
             <Label Grid.Column="4" Text="Image" />
+            <Label Grid.Column="5" Text="Actions" />
         </Grid>
 
         <CollectionView x:Name="questionList" Grid.Row="1">
@@ -43,13 +47,24 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
 
-                        <Label Text="{Binding Id}" />
+                        <Label Text="{Binding Id}" HorizontalOptions="Start"/>
                         <Label Grid.Column="1" Text="{Binding QuestionText}" />
                         <Label Grid.Column="2" Text="{Binding Solution}" />
                         <Label Grid.Column="3" Text="{Binding Mark}" />
-                        <Image Grid.Column="4" Source="dotnet_bot.png" HeightRequest="30" HorizontalOptions="Start"/>
+                        <Image Grid.Column="4" 
+                               Source="dotnet_bot.png" 
+                               HeightRequest="30" 
+                               HorizontalOptions="Start"/>
+                        <Button Grid.Column="5"
+                            x:Name="DeleteBtn"
+                            Text="Supprimer"
+                            Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:QuestionViewModel}}, 
+                            Path=DeleteQuestionCommand}"
+                            CommandParameter="{Binding}"
+                            HorizontalOptions="Start"/>
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
